--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>clase_23524</title>
 </head>
 <body>
-    <h1>Clase GIT</h1>
+    <h1>Ejemplos con JavaScript</h1>
 
 
 
 
 
 
-
-    <script src="./js/clase13.js"></script>
+  
+<script src="./js/clase15.js"></script>
 </body>
 </html>
